--- a/Client/Components/OptionsMenuComponent.razor
+++ b/Client/Components/OptionsMenuComponent.razor
@@ -4,8 +4,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @inject HttpClient Http
 
-<button @onclick="(() => iseditBtnClicked = !iseditBtnClicked)">עריכה</button>
-<button @onclick="(() => isdeleteBtnClicked = !isdeleteBtnClicked)">מחיקה</button>
+<button @onclick="(() => iseditBtnClicked = !iseditBtnClicked)">עריכה🖋️</button>
+<button @onclick="(() => isdeleteBtnClicked = !isdeleteBtnClicked)">מחיקה🗑️</button>
 
 @if (iseditBtnClicked)
 {
