--- a/Client/Components/SubCategoryComponent.razor
+++ b/Client/Components/SubCategoryComponent.razor
@@ -4,14 +4,11 @@
 @using Microsoft.AspNetCore.Components.Web
 @inject HttpClient Http
 @inject NavigationManager nav
-<button @onclick="(() => isOptBtnClicked = !isOptBtnClicked)">options</button>
-@if (isOptBtnClicked)
-{
-    <OptionsMenuComponent editBtnClicked="getUserCategories" deleteBtnClicked="deleteSubCatPopUp"></OptionsMenuComponent>
-}
+
+
 @if (deleteBtnClicked)
 {
-    <GeneralPopUpComponent popupTypeTitle="מחיקת תת קטגוריה" middleText="@popupBodyText" action="מחיקה" makeAction="deleteSubCat" closePopUp="deleteSubCatPopUp"></GeneralPopUpComponent>
+    <GeneralPopUpComponent popupTypeTitle="מחיקת תת קטגוריה" middleText="@popupBodyText" action="🗑️מחיקה" makeAction="deleteSubCat" closePopUp="deleteSubCatPopUp"></GeneralPopUpComponent>
 }
 <h3>@subCategoryTitle</h3>
 <button @onclick="goToTransactionsPage"> @totalSpendings/@budget</button>
@@ -20,10 +17,17 @@
     <span>⚠️</span>
 }
 <button @onclick="openAddTransOverlay">+</button>
+<button @onclick="(() => isOptBtnClicked = !isOptBtnClicked)">🚦</button>
 
 @if (openTransOverlay)
 {
     <AddTransactionComponent subCategoryTitle="@subCategoryTitle" subCategoryIDTOGet="@subCategoryIDToGet" isTransactionOverlayOpen="@openAddTransOverlay" userID="@userID" gapsToUpdateBudgets="gapsToUpdateTheBudget"  addTransactionToTotal="addNewTransToTotalSpendings"></AddTransactionComponent>
+    
+}
+
+@if (isOptBtnClicked)
+{
+    <OptionsMenuComponent editBtnClicked="getUserCategories" deleteBtnClicked="deleteSubCatPopUp"></OptionsMenuComponent>
 }
 @if (editSubCatBtnClicked)
 {
@@ -112,6 +116,8 @@
         <button class="submit-btn" @onclick="saveUpdatedSubCat">שמירה וסיום</button>
     </div>
 }
+
+<hr />
 
 @code {
 
