--- a/Client/Components/TransOverviewComponent.razor
+++ b/Client/Components/TransOverviewComponent.razor
@@ -21,6 +21,8 @@
     transDate = DateTime.Parse(transaction.transDate),
     fixedMonthly = transaction.fixedMonthly,
     tagID = transaction.tagID,
+    tagTitle = transaction.tagTitle,
+    tagColor = transaction.tagColor,
     transTitle = transaction.transTitle,
     parentTransID = transaction.parentTransID,
     description = transaction.description
